--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,8 @@
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.4",
     "@mui/x-data-grid": "^6.6.0",
+    "@mui/x-data-grid-generator": "^6.8.0",
+    "@mui/x-data-grid-premium": "^6.8.0",
     "@nivo/core": "^0.83.0",
     "@nivo/geo": "^0.83.0",
     "@nivo/line": "^0.83.0",
