--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
@@ -31,5 +32,11 @@
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
-  }
+  },
+  "devServer": { 
+    "inline": true, 
+    "contentBase": "./dist", 
+    "port": 5001, 
+    "proxy": { "/api/**": { "target": "http://localhost:50001", "secure": false }  }
+ }
 }
